Feat: Criado o jogo de operações no modo facil

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
             <button onclick="abrirModal('modalSobre')">Sobre</button>
         </menu>
 
-        <div id="modalSobre" class="modal" style="display: block;">
+        <div id="modalSobre" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="fecharModal('modalSobre')">&times;</span>
                 <h2>Sobre o Projeto</h2>
-                <p>Este é um jogo educativo feito em HTML, CSS e JS.</p>
+                <br>
+                <p>
+                    Olá, meu nome é leonardo e esse é um pequeno projeto feito na faculdade de um jogo educativo.
+                    O projeto utiliza tecnologias web como HTML, CSS e JavaScript para criar uma experiência interativa e educativa.
+                    É apenas um escopo inicial e pretendo expandi-lo no futuro.
+                </p>
             </div>
         </div>
 
@@ -33,6 +38,7 @@
             <div class="modal-content">
                 <span class="close" onclick="fecharModal('modalConfig')">&times;</span>
                 <h2>Configurações</h2>
+                <br>
                 <p>Aqui você pode ajustar o som, o tema e outras opções.</p>
             </div>
         </div>
