--- a/jogar/jogo.html
+++ b/jogar/jogo.html
@@ -11,7 +11,7 @@
     <main>
         <h1>Escolha a dificuldade</h1>
         <menu class="menu-dificuldade">
-            <button id="facil">Fácil</button>
+            <a href="facil.html"><button id="facil">Fácil</button></a>
             <button id="medio">Médio</button>
             <button id="dificil">Difícil</button>
     </main>
