--- a/jogar/facil.html
+++ b/jogar/facil.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div id="vida">
+        <h3>Vidas:</h3>
+        <div class="coracao" id="vida1">❤️</div>
+        <div class="coracao" id="vida2">❤️</div>
+        <div class="coracao" id="vida3">❤️</div>
+    </div>
     <main>
     <h2 id="conta"></h2>
 
