--- a/jogar/facil.html
+++ b/jogar/facil.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div id="score"><p>Pontuação: 0</p></div>
     <div id="vida">
         <h3>Vidas:</h3>
         <div class="coracao" id="vida1">❤️</div>
