Fear: Implementado o modo de dificuldade média, ainda na fase de testes

--- a/jogar/medio.html
+++ b/jogar/medio.html
@@ -16,8 +16,6 @@
         <div class="coracao" id="vida1">❤️</div>
         <div class="coracao" id="vida2">❤️</div>
         <div class="coracao" id="vida3">❤️</div>
-        <div class="coracao" id="vida4">❤️</div>
-        <div class="coracao" id="vida5">❤️</div>
     </div>
     <main>
     <h2 id="conta"></h2>
@@ -25,5 +23,5 @@
     <div id="opcoes"></div>
     </main>
 </body>
-<script src="../js/facil.js"></script>
+<script src="../js/medio.js"></script>
 </html>
