Feat: Criado modo difícil, indo para a fase de testes

--- a/jogar/dificil.html
+++ b/jogar/dificil.html
@@ -23,5 +23,5 @@
     <div id="opcoes"></div>
     </main>
 </body>
-<script src="../js/f"></script>
+<script src="../js/dificil.js"></script>
 </html>
