Feat: Melhorias gerais realizadas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <img src="assets/background_i.jpg" alt="" class="background">
+
     <main class="content">
 
         <h1>Jogo dos números</h1>
