--- a/jogar/jogo.html
+++ b/jogar/jogo.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+        <div id="topbar">
+        <button id="voltar" onclick="voltarMenu()">← Voltar</button>
+        </div>
+    </div>
     <main>
         <h1>Escolha a dificuldade</h1>
         <menu class="menu-dificuldade">
             <a href="facil.html"><button id="facil">Fácil</button></a>
-            <button id="medio">Médio</button>
-            <button id="dificil">Difícil</button>
+            <a href="medio.html"><button id="medio">Médio</button></a>
+            <a href="dificil.html"><button id="dificil">Difícil</button></a>
     </main>
 </body>
+<script src="../js/botaoVoltar.js"></script>
 </html>
