--- a/jogar/medio.html
+++ b/jogar/medio.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/facil.css">
+    <link rel="stylesheet" href="../css/modos.css">
 </head>
 
 <body>
-    <div id="score"><p>Pontuação: 0</p></div>
+    <div id="topbar">
+        <button id="voltar" onclick="voltarMenu()">← Voltar</button>
+        <p>Médio</p>
+        <div id="score"><p>Pontuação: 0</p></div>
+    </div>
+
     <div id="vida">
         <h3>Vidas:</h3>
         <div class="coracao" id="vida1">❤️</div>
