--- a/jogar/facil.html
+++ b/jogar/facil.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/facil.css">
+    <link rel="stylesheet" href="../css/modos.css">
 </head>
 
 <body>
-    <div id="score"><p>Pontuação: 0</p></div>
+
+    <div id="topbar">
+        <button id="voltar" onclick="voltarMenu()">← Voltar</button>
+        <p>Fácil</p>
+        <div id="score">
+            <p>Pontuação: 0</p>
+        </div>
+    </div>
+
     <div id="vida">
         <h3>Vidas:</h3>
         <div class="coracao" id="vida1">❤️</div>
@@ -19,11 +27,12 @@
         <div class="coracao" id="vida4">❤️</div>
         <div class="coracao" id="vida5">❤️</div>
     </div>
-    <main>
+<main>
     <h2 id="conta"></h2>
 
     <div id="opcoes"></div>
-    </main>
+</main>
 </body>
 <script src="../js/facil.js"></script>
+
 </html>
