Fix: Pequenas correções

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <img src="assets/background_i.jpg" alt="" class="background">
+   
+    <!--<audio src="./sound/lofi.mp3" autoplay loop id="somFundo"></audio>/-->
 
+<img src="./assets/background_i.jpg" alt="" class="background">
     <main class="content">
 
         <h1>Jogo dos números</h1>
@@ -22,6 +24,7 @@
             <button onclick="abrirModal('modalConfig')">Configurações</button>
             <button onclick="abrirModal('modalSobre')">Sobre</button>
         </menu>
+
         <div id="modalSobre" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="fecharModal('modalSobre')">&times;</span>
@@ -40,7 +43,7 @@
                 <span class="close" onclick="fecharModal('modalConfig')">&times;</span>
                 <h2>Configurações</h2>
                 <br>
-                <p>Aqui você pode ajustar o som, o tema e outras opções.</p>
+                <p>Incompleto</p>
             </div>
         </div>
 
@@ -50,7 +53,6 @@
         <p>Feito por <strong><a href="https://github.com/L3onVictor">Leonardo Oliveira.</a></strong></p>
     </footer>
 
-    <script src="./js/modal.js"></script>
 </body>
-
+    <script src="./js/modal.js"></script>
 </html>
